added linkedin and facebook links

--- a/templates/ClientHome/index.html.twig
+++ b/templates/ClientHome/index.html.twig
@@ -1158,9 +1158,9 @@
 						<div class="team-one__image">
 							<img src="{{asset('images/newmootaz.jpg')}}" height="auto"; width="auto" alt="">
 							<div class="team-one__social">
-								<a href="#" class="fab fa-facebook-f"></a>
-								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-linkedin-in"></a>
+								<a href="https://www.facebook.com/mootaz.jebalia/" class="fab fa-facebook-f"></a>
+								<a href="https://twitter.com/ThePrimeagen" class="fab fa-twitter"></a>
+								<a href="https://www.linkedin.com/in/theprimeagen-multi-billion-9699184a/" class="fab fa-linkedin-in"></a>
 								<a href="#" class="fab fa-google-plus-g"></a>
 							</div>
 							<!-- /.team-one__social -->
@@ -1185,8 +1185,9 @@
 						<div class="team-one__image">
 							<img src="{{asset('images/wajdata.jpg')}}" height="auto" width="auto" alt="">
 							<div class="team-one__social">
+							    <a href="https://www.facebook.com/wajdi.bouallegui.3" class="fab fa-facebook-f"></a>
 								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-linkedin-in"></a>
+								<a href="https://www.linkedin.com/in/wajdi-bouallegui-357a68216/" class="fab fa-linkedin-in"></a>
 								<a href="#" class="fab fa-google-plus-g"></a>
 							</div>
 							<!-- /.team-one__social -->
