--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -116,7 +116,7 @@
 					<a href="#" class="search-popup__toggler">
 						<i class="muzex-icon-search"></i>
 					</a>
-					<a class="sidemenu-icon side-content__toggler" href="#">
+					<a class="sidemenu-icon side-content__toggler" href="{{ path('app_cart') }}">
 						<i class="muzex-icon-menu"></i>
 					</a>
 				</div>
