--- a/templates/ClientHome/index.html.twig
+++ b/templates/ClientHome/index.html.twig
@@ -50,7 +50,7 @@ if (soundButton) {
 	<div class="page-wrapper">
 		<nav class="main-nav-one stricky main-nav-one__home-three original">
 		<div class="website-controls">
-        <button type="button" class="btn-toggle-sound">
+        <button type="button" class="btn-toggle-sound" style="display: none;">
           <img src="{{ asset('uploads/sound-on.png') }}" alt="Sound" id="sound-icon" style= "width :30px; height:30px;">
         </button>
 			<div class="container">
