--- a/templates/formations/index.html.twig
+++ b/templates/formations/index.html.twig
@@ -21,13 +21,22 @@
             {% for formation in formations %}
             <div class="col-lg-12">
                 <div class="event-one__single animated"> <!-- Added 'animated' class for animation -->
-                    <div class="event-one__content">
-                        <!-- Optionally removed ID display -->
-                        <img src="/images/collection-1-3.jpg" alt="Formation Image"> <!-- Make sure the path to your image is correct -->
+                    <div class="d-flex align-items-center"> <!-- Flex container -->
+                        <img src="/images/collection-1-3.jpg" alt="Formation Image" style="flex-shrink: 0; width: auto; height: 100px;"> <!-- Image with fixed height -->
+                        <div class="ml-3"> <!-- Margin left for spacing -->
+                            <p>Date Start: {{ formation.dateDebut ? formation.dateDebut|date('Y-m-d') : 'Not specified' }}</p> <!-- Format the start date -->
+                            <p class="discord-btn" style="display: none;"> <!-- Initially hide the Discord button -->
+                                <a href="https://discord.gg/H7Gr9FT7">
+                                    <svg viewBox="0 0 245 240" xmlns="http://www.w3.org/2000/svg" style="width: 50px; height: 50px; background-color: white; border-radius: 50%; padding: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.25);">
+                                        <path fill="#7289DA" d="M104.4 103.68c-6.72 0-12.16 5.84-12.16 13.04 0 7.2 5.44 13.04 12.16 13.04s12.16-5.84 12.16-13.04c0-7.2-5.44-13.04-12.16-13.04zm36.48 0c-6.72 0-12.16 5.84-12.16 13.04 0 7.2 5.44 13.04 12.16 13.04 6.72 0 12.16-5.84 12.16-13.04 0-7.2-5.44-13.04-12.16-13.04z"/>
+                                    </svg>
+                                </a>
+                            </p>
+                        </div>
                     </div>
-                    <div class="event-one__btn-block">
+                    <div class="event-one__btn-block text-center">
                         <a href="{{ path('app_formations_show', {'id': formation.id}) }}" class="thm-btn">Show</a>
-                        <a href="{{ path('app_participant_new', {'formationId': formation.id}) }}" class="thm-btn">Participate</a>
+                        <a href="{{ path('app_participant_new', {'formationId': formation.id}) }}" class="thm-btn" onclick="showDiscordButton()">Participate</a>
                     </div>
                 </div>
             </div>
@@ -36,4 +45,11 @@
         </div>
     </div>
 </section>
+
+<script>
+    function showDiscordButton() {
+        document.querySelector('.discord-btn').style.display = 'block';
+    }
+</script>
+
 {% endblock %}
